--- a/app/src/main/res/layout/fragment_medications.xml
+++ b/app/src/main/res/layout/fragment_medications.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F5F1F1"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".medications.view.MedicationsFragment">
 
@@ -14,5 +15,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:text="add" />
+        android:text="@string/addButt" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_medics"
+        android:layout_width="match_parent"
+        android:layout_height="604dp"
+        app:layout_constraintBottom_toTopOf="@+id/butt_add"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        tools:listitem="@layout/medic_item_rv" />
 </androidx.constraintlayout.widget.ConstraintLayout>
