--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,7 +16,12 @@
         tools:layout="@layout/fragment_medications" >
         <action
             android:id="@+id/action_medicationsFragment_to_addMedicationFragment"
-            app:destination="@id/addMedicationFragment" />
+            app:destination="@id/addMedicationFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:launchSingleTop="true"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popUpTo="@id/homeFragment2"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/moreFragment"
@@ -27,5 +32,12 @@
         android:id="@+id/addMedicationFragment"
         android:name="com.example.medicationreminder.medications.view.AddMedicationFragment"
         android:label="fragment_add_medication"
-        tools:layout="@layout/fragment_add_medication" />
+        tools:layout="@layout/fragment_add_medication" >
+        <action
+            android:id="@+id/action_addMedicationFragment_to_medicationsFragment2"
+            app:destination="@id/medicationsFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/homeFragment2"
+            app:popUpToInclusive="true" />
+    </fragment>
 </navigation>
