--- a/app/src/main/res/layout/fragment_medications.xml
+++ b/app/src/main/res/layout/fragment_medications.xml
@@ -26,4 +26,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
         tools:listitem="@layout/medic_item_rv" />
+    <ImageView
+        android:id="@+id/empty_iv"
+        android:layout_width="220dp"
+        android:layout_height="263dp"
+        android:layout_marginTop="176dp"
+        android:layout_marginEnd="96dp"
+        android:scaleType="fitCenter"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
