adding design of display Screen

--- a/app/src/main/res/layout/fragment_add_medication.xml
+++ b/app/src/main/res/layout/fragment_add_medication.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     >
 
-    <!-- TODO: Update blank fragment layout -->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -213,12 +213,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <Button
+                    android:id="@+id/afterLayout4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:id="@+id/afterLayout4"
-                    android:text="@string/nextBtn" />
+                    android:text="done" />
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
