--- a/app/src/main/res/layout/activity_register_acivity.xml
+++ b/app/src/main/res/layout/activity_register_acivity.xml
@@ -124,7 +124,7 @@
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
-           android:id="@+id/btn_register"
+           android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
 
