--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -48,16 +48,22 @@
                         android:layout_margin="16dp"
                         android:text="TextView" />
 
+
+
                 </LinearLayout>
 
 
 
             </androidx.cardview.widget.CardView>
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/pager"
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/day_recycler"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"/>
+        android:layout_weight="4"
+        />
+
+
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
