--- a/app/src/main/res/layout/fragment_add_medication.xml
+++ b/app/src/main/res/layout/fragment_add_medication.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     >
 
-
+    <!-- TODO: Update blank fragment layout -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -213,13 +213,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-
                 <Button
-                    android:id="@+id/afterLayout4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:text="done" />
+                    android:id="@+id/afterLayout4"
+                    android:text="@string/nextBtn" />
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -330,6 +329,7 @@
                     android:text="@string/WhenIhaveleft"
                     android:layout_height="wrap_content"/>
                 <TextView
+                    android:id="@+id/selectAmountRefill"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="@string/selectamaount"/>
