--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,7 +11,7 @@
         android:icon="@drawable/icon_medi"
         android:title="@string/medications" />
     <item
-        android:id="@+id/moreFragment"
-        android:icon="@drawable/icon_more"
-        android:title="@string/settings" />
+        android:id="@+id/healthTakersFragment"
+        android:icon="@drawable/icon_health"
+        android:title="HealthTakers" />
 </menu>
