--- a/app/src/main/res/layout/activity_rest_password.xml
+++ b/app/src/main/res/layout/activity_rest_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".login.restPassword.view.RestPassword">
+    tools:context=".login.restPassword.r.RestPassword">
 
 
     <com.google.android.material.textfield.TextInputLayout
