--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/menu_item"/>
+        app:menu="@menu/bottom_nav_menu"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
