--- a/app/src/main/res/layout/fragment_add_medication.xml
+++ b/app/src/main/res/layout/fragment_add_medication.xml
@@ -218,7 +218,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:id="@+id/afterLayout4"
-                    android:text="@string/nextBtn" />
+                    android:text="@string/done" />
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
