--- a/app/src/main/res/layout/strengthdialoug.xml
+++ b/app/src/main/res/layout/strengthdialoug.xml
@@ -37,9 +37,11 @@
             android:layout_height="wrap_content"
             android:src="@drawable/minus_icon" />
     </LinearLayout>
+
     <Spinner
+        android:id="@+id/strengthMeasure"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:entries="@array/measure"
-        android:layout_margin="10dp"/>
+        android:layout_margin="10dp"
+        android:entries="@array/measure" />
 </LinearLayout>
