--- a/app/src/main/res/layout/fragment_medications.xml
+++ b/app/src/main/res/layout/fragment_medications.xml
@@ -34,7 +34,7 @@
         android:layout_marginTop="176dp"
         android:layout_marginEnd="96dp"
         android:scaleType="fitCenter"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
