--- a/app/src/main/res/layout/health_taker_item.xml
+++ b/app/src/main/res/layout/health_taker_item.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="7dp"
         android:layout_marginTop="17dp"
-        android:text="Azza Helmy"
+        android:text="@string/azza_helmy"
         android:fontFamily="serif"
         android:textColor="@color/black"
         android:textSize="21sp"
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="7dp"
         android:ems="7"
-        android:text="is invited you to take care of her"
+        android:text="@string/is_invited_you_to_take_care_of_her"
         app:layout_constraintStart_toStartOf="@+id/tv_name"
         app:layout_constraintTop_toBottomOf="@id/tv_name" />
 
