--- a/app/src/main/res/layout/medic_item_rv.xml
+++ b/app/src/main/res/layout/medic_item_rv.xml
@@ -1,85 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#4C4B4B"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    app:cardCornerRadius="7dp"
-    app:cardElevation="5dp">
+    android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <androidx.cardview.widget.CardView
 
-        <ImageView
-            android:id="@+id/img_medic"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_margin="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="16dp"
-            tools:srcCompat="@drawable/pillsbottle" />
+        android:layout_width="390dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="5dp">
 
-        <TextView
-            android:id="@+id/tv_medic_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            android:fontFamily="monospace"
-            android:text="@string/tuskkan"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            app:layout_constraintStart_toEndOf="@id/img_medic"
-            app:layout_constraintTop_toTopOf="@id/img_medic" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tv_strngth"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:fontFamily="serif-monospace"
-            android:text="@string/_500_mg"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            app:layout_constraintStart_toEndOf="@id/tv_medic_name"
-            app:layout_constraintTop_toTopOf="@id/img_medic" />
+            <ImageView
+                android:id="@+id/img_medic"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_margin="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:srcCompat="@drawable/pillsbottle" />
 
-        <TextView
-            android:id="@+id/tv_refill"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:text="@string/_1_left"
-            app:layout_constraintEnd_toEndOf="@id/img_medic"
-            app:layout_constraintStart_toStartOf="@id/img_medic"
-            app:layout_constraintTop_toBottomOf="@id/img_medic" />
+            <TextView
+                android:id="@+id/tv_medic_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp"
+                android:fontFamily="monospace"
+                android:text="@string/tuskkan"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                app:layout_constraintStart_toEndOf="@id/img_medic"
+                app:layout_constraintTop_toTopOf="@id/img_medic" />
 
-        <TextView
-            android:id="@+id/tv_adder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="20dp"
-            android:text="@string/added_by_azza"
-           app:layout_constraintTop_toBottomOf="@id/img_alarm"
-            app:layout_constraintEnd_toEndOf="parent" />
+            <TextView
+                android:id="@+id/tv_strngth"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:fontFamily="serif-monospace"
+                android:text="@string/_500_mg"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                app:layout_constraintStart_toEndOf="@id/tv_medic_name"
+                app:layout_constraintTop_toTopOf="@id/tv_medic_name" />
 
-        <ImageView
-            android:id="@+id/img_alarm"
-            android:layout_width="wrap_content"
-            android:layout_marginEnd="15dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/tv_medic_name"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_baseline_notifications_active_24"
-            tools:layout_editor_absoluteX="345dp"
-            tools:layout_editor_absoluteY="0dp" />
+            <TextView
+                android:id="@+id/tv_refill"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:text="@string/_1_left"
+                app:layout_constraintEnd_toEndOf="@id/img_medic"
+                app:layout_constraintStart_toStartOf="@id/img_medic"
+                app:layout_constraintTop_toBottomOf="@id/img_medic" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/tv_adder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="25dp"
+                android:layout_marginEnd="17dp"
+                android:text="@string/added_by_azza"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/img_alarm" />
+
+            <ImageView
+                android:id="@+id/img_alarm"
+                android:layout_width="67dp"
+                android:layout_height="28dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintBottom_toBottomOf="@id/tv_strngth"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/tv_strngth"
+                app:layout_constraintVertical_bias="1.0"
+                app:srcCompat="@drawable/ic_baseline_notifications_active_24" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+</LinearLayout>
