--- a/app/src/main/res/layout/day_drags.xml
+++ b/app/src/main/res/layout/day_drags.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -17,17 +18,19 @@
             android:layout_margin="12dp"
             android:orientation="vertical">
             <TextView
-                android:id="@+id/tv_item_title"
+                android:id="@+id/hour_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="12sp"
                 android:textSize="18sp"
-                android:visibility="visible"
+
                 android:text="Item Title"/>
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_sub_item"
+                android:id="@+id/drugs_recycler"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                tools:listitem="@layout/drag_item"
+                />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
