--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -9,5 +9,8 @@
     <stroke
         android:width="2dp"
         android:color="#398AB9" />
+    <solid
+        android:color="@color/app_color"
+        />
 </shape>
 
