--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,44 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:focusableInTouchMode="true"
-    android:gravity="center"
-    android:layout_marginTop="32dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-
-    tools:context=".login.view.LoginActivity"
-    android:background="#009688"
-
-    android:layout_gravity="center">
-    <androidx.constraintlayout.widget.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <com.google.android.material.progressindicator.CircularProgressIndicator
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:indeterminate="true"
-            android:id="@+id/progress_bar"
+        android:layout_height="match_parent"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+       android:background="@color/app_color"
+        tools:context=".login.view.LoginActivity"
+
+        >
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:indeterminate="true"
+        android:id="@+id/progress_bar"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <ImageView
+        android:id="@+id/app_icon"
+        android:layout_width="269dp"
+        android:layout_height="170dp"
+        android:layout_marginTop="32dp"
+        android:gravity="bottom"
+        android:scaleType="centerCrop"
+        android:src="@drawable/app_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/app_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/appName"
+        android:textColor="@android:color/white"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/app_icon"
+
+        />
 
 
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+      android:layout_marginTop="32dp"
+    app:cardCornerRadius="40dp"
+    app:cardBackgroundColor="@color/white"
+    app:cardPreventCornerOverlap="true"
+        app:layout_constraintTop_toBottomOf="@id/app_name"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    android:background="@color/white"
+
+    app:layout_constraintBottom_toBottomOf="parent"
+    >
 
 
-            />
 
         <LinearLayout
 
-
+            android:id="@+id/linear_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:paddingStart="32dp"
+            android:paddingEnd="32dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/app_name"
+           app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:orientation="vertical"
 
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="2"
+                android:layout_marginBottom="32dp"
+                >
+                <TextView
+                    android:id="@+id/have_account"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/new_user"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:gravity="start"
+
+                    android:textStyle="normal"
+
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="start"
+
+                    android:onClick="openRegister"
+                    android:text="@string/creat_account"
+                    android:textColor="@color/app_color"
+                    android:textSize="16sp"
+                    android:textStyle="normal" />
+            </LinearLayout>
 
 
 
@@ -85,42 +158,81 @@
                     />
             </com.google.android.material.textfield.TextInputLayout>
 
-
-            <Button
-                android:id="@+id/btn_login"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-
-
-                android:backgroundTint="@color/purple_200"
-                android:onClick="onLoginClick"
-                android:text="@string/btn_login_text" />
-
             <TextView
                 android:id="@+id/btn_forgettingPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:textSize="16sp"
+                android:layout_marginStart="48dp"
+                android:layout_marginTop="12dp"
                 android:onClick="onForgetPasswordClick"
+                android:textColor="@color/app_color"
                 android:text="@string/forgetPassword"
-                android:layout_margin="24dp"/>
-
-            <ImageView
-                android:id="@+id/btn_google"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                android:onClick="loginWithGoogle"
-                android:background="@color/white"
-                android:src="@drawable/google_icon"
                 />
+            <Button
+                android:id="@+id/btn_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="60dp"
+                android:layout_marginEnd="60dp"
+                android:layout_marginTop="32dp"
+                android:layout_gravity="center"
+                 android:textSize="24sp"
+                android:textColor="@color/white"
+                android:background="@drawable/button_background"
 
+                android:onClick="onLoginClick"
+                android:text="@string/btn_login_text" />
+
+
+            <TextView
+                android:id="@+id/login_with"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="32dp"
+                android:text="@string/login_with" />
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_marginTop="12dp"
+
+    >
+    <ImageView
+        android:id="@+id/btn_google"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:background="@color/white"
+        android:onClick="loginWithGoogle"
+        android:src="@drawable/google_plus"/>
+    <ImageView
+        android:id="@+id/btn_facebook"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="16dp"
+        android:background="@color/white"
+        android:onClick="loginWithGoogle"
+        android:src="@drawable/facebook_icon"/>
+
+</LinearLayout>
 
         </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
-</ScrollView>
+</androidx.cardview.widget.CardView>
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
 
 
 
