--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,45 +7,49 @@
     android:id="@+id/drawerLayout"
 
     tools:context=".MainActivity">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
 
-        >
+   <androidx.appcompat.widget.LinearLayoutCompat
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:orientation="vertical"
+       android:weightSum="6"
+       >
+       <com.google.android.material.appbar.AppBarLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_weight=".5"
+           >
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+           <com.google.android.material.appbar.MaterialToolbar
+               android:id="@+id/toolbar"
+               android:layout_width="50dp"
+               android:layout_height="match_parent"
+               app:title="doaa"
+
+               app:navigationIcon="@drawable/user_icon"
+               style="@style/Widget.MaterialComponents.Toolbar.Primary"
+               />
+
+       </com.google.android.material.appbar.AppBarLayout>
+
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/nav_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:background="@color/purple_500"
-            android:elevation="8sp"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
+            android:layout_height="0dp"
+            android:layout_weight="4.75"
+            android:background="#ECE5E5"
+            app:defaultNavHost="true"
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/nav_host_fragment"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:defaultNavHost="true"
-        android:layout_below="@id/toolbar"
-        android:layout_alignParentBottom="true"
-        android:background="#ECE5E5"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/nav_graph" />
+            app:navGraph="@navigation/nav_graph" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav_view"
         android:layout_width="match_parent"
-        android:layout_height="65dp"
+        android:layout_height="0dp"
         app:labelVisibilityMode="labeled"
-       android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
+       android:layout_weight=".5"
         app:menu="@menu/bottom_nav_menu" />
 
 
@@ -53,8 +57,9 @@
 
 
 
-    </RelativeLayout>
 
+
+   </androidx.appcompat.widget.LinearLayoutCompat>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_view"
@@ -62,6 +67,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/bottom_nav_menu"/>
+       />
 
 </androidx.drawerlayout.widget.DrawerLayout>
