--- a/app/src/main/res/layout/drag_item.xml
+++ b/app/src/main/res/layout/drag_item.xml
@@ -1,51 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
-
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/card"
+        android:id="@+id/card_view_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="12dp">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <ImageView
-                android:id="@+id/img_sub_item"
+                android:id="@+id/med_image"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:background="@color/black"
-                />
+                 />
+
+
             <LinearLayout
-                android:id="@+id/linear"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:layout_toEndOf="@id/img_sub_item"
+                android:layout_toEndOf="@id/med_image"
                 android:padding="12dp"
                 android:orientation="vertical">
                 <TextView
-                    android:id="@+id/tv_sub_item_title"
+                    android:id="@+id/med_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
                     android:text="Sub item title"/>
                 <TextView
+                    android:id="@+id/med_type"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Description goes here..."/>
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-
-
-                android:text="time" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
