--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -10,7 +10,7 @@
         android:width="2dp"
         android:color="#398AB9" />
     <solid
-        android:color="@color/app_color"
+        android:color="@color/purple_700"
         />
 </shape>
 
