--- a/app/src/main/res/layout/activity_register_acivity.xml
+++ b/app/src/main/res/layout/activity_register_acivity.xml
@@ -13,7 +13,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/app_color"
+        android:background="@color/purple_700"
 
         >
         <com.google.android.material.progressindicator.CircularProgressIndicator
@@ -35,7 +35,7 @@
         android:gravity="bottom"
         android:scaleType="centerCrop"
 
-        android:src="@drawable/app_icon"
+        android:src="@drawable/icon_medi"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -200,7 +200,7 @@
                     android:gravity="start"
 
                     android:text="@string/login"
-                    android:textColor="@color/app_color"
+                    android:textColor="@color/purple_700"
                     android:textSize="16sp"
                     android:textStyle="normal" />
             </LinearLayout>
